Moving files to appropriate subfolders

--- a/satisfactiondriveranalysis/satisfactiondriveranalysisC.ipynb
+++ b/satisfactiondriveranalysis/satisfactiondriveranalysisC.ipynb
@@ -2,153 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Product</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Sales</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2021-06-22</td>\n",
-       "      <td>Pixelophone_XL</td>\n",
-       "      <td>Pixel</td>\n",
-       "      <td>59.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2021-06-23</td>\n",
-       "      <td>Pixelophone_XL</td>\n",
-       "      <td>Pixel</td>\n",
-       "      <td>123.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2021-06-24</td>\n",
-       "      <td>Pixelophone_XL</td>\n",
-       "      <td>Pixel</td>\n",
-       "      <td>105.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2021-06-25</td>\n",
-       "      <td>Pixelophone_XL</td>\n",
-       "      <td>Pixel</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2021-06-26</td>\n",
-       "      <td>Pixelophone_XL</td>\n",
-       "      <td>Pixel</td>\n",
-       "      <td>60.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7202</th>\n",
-       "      <td>632</td>\n",
-       "      <td>2023-07-08</td>\n",
-       "      <td>GalaxyBuds_Pro</td>\n",
-       "      <td>Galaxy</td>\n",
-       "      <td>182.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7203</th>\n",
-       "      <td>633</td>\n",
-       "      <td>2023-07-09</td>\n",
-       "      <td>GalaxyBuds_Pro</td>\n",
-       "      <td>Galaxy</td>\n",
-       "      <td>116.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7204</th>\n",
-       "      <td>634</td>\n",
-       "      <td>2023-07-10</td>\n",
-       "      <td>GalaxyBuds_Pro</td>\n",
-       "      <td>Galaxy</td>\n",
-       "      <td>247.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7205</th>\n",
-       "      <td>635</td>\n",
-       "      <td>2023-07-11</td>\n",
-       "      <td>GalaxyBuds_Pro</td>\n",
-       "      <td>Galaxy</td>\n",
-       "      <td>112.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7206</th>\n",
-       "      <td>636</td>\n",
-       "      <td>2023-07-12</td>\n",
-       "      <td>GalaxyBuds_Pro</td>\n",
-       "      <td>Galaxy</td>\n",
-       "      <td>24.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>7207 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Unnamed: 0        Date         Product Category  Sales\n",
-       "0              0  2021-06-22  Pixelophone_XL    Pixel   59.0\n",
-       "1              1  2021-06-23  Pixelophone_XL    Pixel  123.0\n",
-       "2              2  2021-06-24  Pixelophone_XL    Pixel  105.0\n",
-       "3              3  2021-06-25  Pixelophone_XL    Pixel    0.0\n",
-       "4              4  2021-06-26  Pixelophone_XL    Pixel   60.0\n",
-       "...          ...         ...             ...      ...    ...\n",
-       "7202         632  2023-07-08  GalaxyBuds_Pro   Galaxy  182.0\n",
-       "7203         633  2023-07-09  GalaxyBuds_Pro   Galaxy  116.0\n",
-       "7204         634  2023-07-10  GalaxyBuds_Pro   Galaxy  247.0\n",
-       "7205         635  2023-07-11  GalaxyBuds_Pro   Galaxy  112.0\n",
-       "7206         636  2023-07-12  GalaxyBuds_Pro   Galaxy   24.0\n",
-       "\n",
-       "[7207 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as  np \n",
     "import pandas as  pd\n",
@@ -161,9 +17,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Satisfaction driver analysis for a amusement park\n",
+    "# Satisfaction driver analysis for an amusement park\n",
     "\n",
-    "The following analysis is based on an example provided by R for Marketing Research and Analytics (2015). The data allows for a set of analyses to demonstrate satisfaction driver analysis A standard protocol within marketing analytics to investigate the relationships between potential drivers of customer satisfaction. Specifcally in this exaxmple the stakeholdweer9Mananger of amusement part wants specific things he can do to drive customer satisfaction more."
+    "The following analysis is based on an dataset provided by the 'R for Marketing Research and Analytics' (CHapaman & Feir; 2015). The data allows for a set of analyses to demonstrate satisfaction driver analysis A standard protocol within marketing analytics to investigate the relationships between potential drivers of customer satisfaction. Specifcally in this exaxmple the stakeholdweer9Mananger of amusement part wants specific things he can do to drive customer satisfaction more."
    ]
   },
   {
